# mr-vision

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  cameralinks.yml  camerarechts.yml  vs_cmdline.bat
.metadata/.plugins/org.eclipse.core.resources/.root/: 2.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2014/4/16/: refactorings.history  refactorings.index
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.mr-soccer-server_0/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.mr-soccer-server_0/FP.local.files_0/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.mr-soccer-server_0/H.local_16/: node.properties
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.wst.jsdt.core/: externalLibsTimeStamps
core/: CMakelists.txt  bot.cpp  bot.h  core.cpp  core.cpp~  marker.h  markerlist.cpp  udp_server.cpp
core/gui/: mainGUI.cpp  mainGUI.h  mainGUI.ui  mrvisiongui.cpp  mrvisiongui.h  mrvisiongui.ui
src/: main.cpp
src/core/: bot.h  camera.cpp  camera.h  detectedmarker.cpp  detectedmarker.h  detector.h  detectorneural.cpp  detectorneural.h  detectorsimple.cpp  detectorsimple.h  marker.cpp  marker.h  markerlist.cpp  markerlist.h  neural.cpp  neural.h  udp_server.cpp  udp_server.h
src/core/ill/: MarkerDetector.cpp  MarkerDetector.h
src/gui/: cameragui.cpp  cameragui.h  markergui.cpp  markergui.h  networkgui.cpp  networkgui.h  visiongui.cpp  visiongui.h
src/gui/ui/: camera.ui  marker.ui  network.ui  vision.ui
